tests/error/type_errors/call_not_function.py
from guppy.decorator import guppy


@guppy
def foo(x: int) -> int:
    return x(42)
